--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,7 @@ __marimo__/
 
 # dataset
 data/ShapeNetCore.v2.PC15k/
+data/demo/
 outs/
 
 # others
@@ -217,3 +218,4 @@ eval.py
 para.py
 logs/
 checkpoints/
+docs/
