--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -26,10 +26,9 @@ jobs:
         with:
           python-version: '3.x'
           cache: 'pip'
-
+      
       - name: Install deps
-        run: |
-          pip install mkdocs mkdocs-material
+        run: pip install -r requirements.txt
 
       - name: Build site
         run: mkdocs build --strict
