--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ ipywidgets==8.1.3
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.5.1
 json5==0.9.25
 jsonpatch @ file:///croot/jsonpatch_1714483231291/work
 jsonpointer==2.1
@@ -119,6 +120,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.1
 ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
+scikit-learn==1.7.1
+scipy==1.16.1
 Send2Trash==1.8.3
 setuptools==69.5.1
 six==1.16.0
@@ -130,6 +133,7 @@ sympy==1.12.1
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.3.0
 torch @ https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp312-cp312-linux_x86_64.whl#sha256=f15b6f549eebc6e6b22b26754e4f1d7e4469bcd2d4ba1eaab57268ad80bcca96
 torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.0%2Bcu121-cp312-cp312-linux_x86_64.whl#sha256=700f6019bebee9e0ee8b0bcbdb1588809c94a2eb947a1fde2e06adc34b60da2a
